src/objects/Apttus_Revenue2__Agreement_Fee_Trueup__c.object
<CustomObject>
    <description>Holds the many to many relationships between agreement fee and agreement trueup objects</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement fee</description>
        <inlineHelpText>Associated agreement fee</inlineHelpText>
        <label>Agreement Fee</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Agreement Fee-Trueup</relationshipLabel>
        <relationshipName>Agreement_Fee_Trueup_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Trueup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement trueup</description>
        <inlineHelpText>Associated agreement trueup</inlineHelpText>
        <label>Agreement Trueup</label>
        <referenceTo>Apttus_Revenue2__Agreement_Trueup__c</referenceTo>
        <relationshipLabel>Agreement Fee-Trueup</relationshipLabel>
        <relationshipName>Agreement_Fee_Trueup_T</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comitted_Amount__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Guaranteed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comitted Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Agreement Fee-Trueup</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Fee-Trueup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Fee-Trueup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>